# mcp-liner

./: .gitignore  .golangci.yml  Makefile  README.md  go.mod  go.sum  hatch_build.py  pyproject.toml
.githooks/: pre-commit
.github/actions/build-python-wheel/: action.yml
.github/workflows/: ci.yml  release.yml
cmd/mcp-liner/: export.go  main.go  main_cgo.go
internal/config/: config.go  config_test.go
internal/responses/: responses.go
internal/templates/: templates.go
internal/validation/: validation.go  validation_test.go
mcp_liner/: __init__.py
tests/: test_mcp_liner.py
tests/integration/: end_to_end_test.go
tools/: custom_webshell_test.go  generate_auth_user.go  generate_dialer_config.go  generate_dns_config.go  generate_global_config.go  generate_http_config.go  generate_liner_config.go  generate_policy_examples.go  generate_redsocks_config.go  generate_redsocks_iptables.go  generate_sni_config.go  generate_ssh_config.go  generate_stream_config.go  generate_tunnel_config.go  generate_webshell_config.go  new_tools_test.go  query_liner_docs.go  validate_liner_config.go
