[build-system]
requires = ["hatchling", "hatch-vcs", "packaging"]
build-backend = "hatchling.build"

[project]
name = "mcp-liner"
dynamic = ["version"]
description = "MCP Server for Liner configuration generation"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
  { name = "Benson Yan", email = "fuxin04@gmail.com" }, # Assuming based on workspace path, user can update
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Go",
    "Topic :: System :: Systems Administration",
]

[project.scripts]
mcp-liner = "mcp_liner:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["mcp_liner"]
pure-python = false

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

# Ruff configuration
[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["mcp_liner"]

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=mcp_liner",
    "--cov-report=term-missing",
    "--cov-report=html",
]
